# miniRT

./: .gitignore  CMakeLists.txt  DESIGN.md  Dockerfile  FUNCTIONS.md  Makefile  README.md  codecov.yml  example.rt  main.c  minirt.c  minirt_utils.c  test.c  test.rt
.github/: pull_request_template.md
.github/workflows/: code-validation.yml  dev-validation.yml  main-validation.yml  test-validation.yml
bonus/: main_bonus.c
bonus/includes/: camera_bonus.h  error_bonus.h  image_bonus.h  minirt_bonus.h  mlx_hook_bonus.h  parse_bonus.h  ray_bonus.h  reflection_bonus.h  vec2_bonus.h  vec3_bonus.h
bonus/includes/shape/: cone_bonus.h  cylinder_bonus.h  hittable_bonus.h  map_bonus.h  plane_bonus.h  sphere_bonus.h
bonus/scenes/: earth.rt
bonus/srcs/: error_bonus.c  image_bonus.c  light_lst_utils_bonus.c  minirt_async_bonus.c  minirt_bonus.c  minirt_color_bonus.c
bonus/srcs/mlx_hook/: key_hook_bonus.c  loop_hook_bonus.c
bonus/srcs/parse/: minirt_parse_bonus.c  minirt_parse_scene_bonus.c  minirt_parse_shape_bonus.c  minirt_parse_texture2_bonus.c  minirt_parse_texture_bonus.c  minirt_parse_utils2_bonus.c  minirt_parse_utils3_bonus.c  minirt_parse_utils_bonus.c  minirt_parse_vec3_bonus.c  minirt_parse_world_bonus.c
bonus/srcs/ray/: color_bonus.c  ray_bonus.c
bonus/srcs/reflection/: reflection_bonus.c  reflection_utils_bonus.c
bonus/srcs/shape/: bump_bonus.c  cone_bonus.c  cone_endcaps_bonus.c  cone_surface_bonus.c  cylinder_bonus.c  cylinder_endcaps_bonus.c  cylinder_surface_bonus.c  hittable_bonus.c  hittable_utils_bonus.c  plane_bonus.c  sphere_bonus.c  texture_bonus.c
bonus/srcs/vec/: vec2_bonus.c  vec3_bonus.c  vec3_utils_bonus.c
includes/: camera.h  color.h  cylinder.h  error.h  hittable.h  hittable_list.h  image.h  key_hook.h  minirt.h  mlx_hook.h  phong_reflection.h  plane.h  point3.h  ray.h  reflection.h  sphere.h  vec2.h  vec3.h
includes/shape/: cone.h  cylinder.h  hittable.h  plane.h  sphere.h  texture.h
libft/: Makefile
libft/includes/: ft_bool.h  ft_printf.h  ft_type.h  get_next_line.h  libft.h
libft/srcs/: ft_atof.c  ft_atoi.c  ft_isspace.c  ft_strtof.c  ft_strtoi.c
mandatory/includes/: error.h  minirt.h  parse.h  reflection.h  vec2.h
mandatory/includes/shape/: cylinder.h  hittable.h  map.h  plane.h  sphere.h
mandatory/srcs/: minirt_async.c
mandatory/srcs/mlx_hook/: loop_hook.c
mandatory/srcs/parse/: minirt_parse.c  minirt_parse_texture2.c  minirt_parse_utils.c  minirt_parse_utils2.c  minirt_parse_utils3.c  minirt_parse_vec3.c
mandatory/srcs/ray/: color.c
mandatory/srcs/reflection/: reflection.c
mandatory/srcs/shape/: bump.c  cone.c  cone_endcaps.c  cone_surface.c  cylinder_endcaps.c  plane.c
mlx/: interface.swift
resources/: mars_bump.xpm  star_bump.xpm
scenes/: checkerboard.rt  goat.rt  goat_trio.rt  star.rt  trio.rt
srcs/: camera.c  color.c  cylinder.c  error.c  example.rt  hittable.c  hittable_list.c  image.c  key_hook.c  light_lst_utils.c  miniRT.c  minirt.c  minirt_async.c  minirt_color.c  minirt_parse_scene.c  minirt_parse_shape.c  minirt_parse_utils.c  minirt_parse_utils2.c  minirt_parse_utils3.c  minirt_parse_vec3.c  minirt_parse_world.c  minirt_utils.c  minirt_utils2.c  plane.c  point3.c  ray.c  ray_utils.c  sphere.c  vec2.c  vec2_utils.c  vec3.c  vec3_calc.c  vec3_utils.c
srcs/color/: color.c  color_utils.c  get_color.c
srcs/mlx_hook/: key_hook.c  loop_hook.c
srcs/parse/: minirt_parse.c  minirt_parse_scene.c  minirt_parse_shape.c  minirt_parse_texture.c  minirt_parse_texture2.c  minirt_parse_utils2.c  minirt_parse_utils3.c  minirt_parse_world.c
srcs/phong_reflection/: ambient_lightning.c  diffuse_reflection.c  specular_reflection.c
srcs/point3/: point3.c
srcs/ray/: color.c  ray.c  ray_utils.c
srcs/reflection/: ambient.c  diffuse.c  reflection.c  reflection_utils.c  specular.c
srcs/shape/: bump.c  cone.c  cone_endcaps.c  cone_surface.c  cylinder.c  cylinder_endcaps.c  cylinder_surface.c  hittable.c  hittable_utils.c  plane.c  sphere.c  texture.c
srcs/vec/: vec2.c
srcs/vec3/: vec3.c  vec3_calc.c  vec3_random.c  vec3_utils.c  vec3_vec_utils.c
test/: camera_test.cpp  color_test.cpp  example.rt  extension_valid_test.cpp  ft_atof_test.cpp  init_world_test.cpp  main.cpp  minirt_test.cpp  normalize_vec3_test.cpp  parse_ambient_test.cpp  parse_camera_test.cpp  parse_cone_test.cpp  parse_cylinder_test.cpp  parse_light_test.cpp  parse_plane_test.cpp  parse_rtfile_test.cpp  parse_sphere_test.cpp  parse_texture_test.cpp  parse_vec3_test.cpp  quadratic_test.cpp  random_test.cpp  ray_test.cpp  vec3_random_test.cpp  vec3_test.cpp
test/color/: color_test.cpp
test/ray/: ray_test.cpp
test/vec3/: vec3_test.cpp
